@@ -423,6 +423,12 @@ power to the MCU.
 This option will pull the
 .Ql Vcc
 pins of the parallel port down at program exit.
+.It Ar d_high
+This option will leave the 8 data pins on the parallel port active.
+.Pq \&i. \&e. Em high
+.It Ar d_low
+This option will leave the 8 data pins on the parallel port inactive.
+.Pq \&i. \&e. Em low
 .El
 .Pp
 Multiple
